examples/hdinsight/enterprise-security-package/main.tf
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

provider "azurerm" {
  features {}
}

provider "azuread" {}

resource "azurerm_resource_group" "example" {
  name     = "${var.prefix}-HDInsight-ESP"
  location = var.location

  tags = {
    StorageType = "Standard_LRS"
    type        = "test"
    yor_trace   = "c80bae99-828a-4817-895d-743f51cf006a"
  }
}

resource "azurerm_storage_account" "example" {
  name                     = "${var.prefix}sa"
  resource_group_name      = azurerm_resource_group.example.name
  location                 = azurerm_resource_group.example.location
  account_tier             = "Standard"
  account_replication_type = "LRS"
  tags = {
    yor_trace = "ea21e2c6-997d-43a5-b62c-0ceb8fbe7ea5"
  }
}

resource "azurerm_storage_container" "example" {
  name                  = "${var.prefix}-sc"
  storage_account_name  = azurerm_storage_account.example.name
  container_access_type = "private"
}

resource "azurerm_virtual_network" "example" {
  name                = "${var.prefix}-vnet"
  location            = azurerm_resource_group.example.location
  resource_group_name = azurerm_resource_group.example.name
  address_space       = ["10.10.0.0/16"]
  tags = {
    yor_trace = "c55d8ddf-96b1-4c41-966d-9c56e59ce4bd"
  }
}

resource "azurerm_subnet" "example" {
  name                 = "${var.prefix}-subnet"
  resource_group_name  = azurerm_resource_group.example.name
  virtual_network_name = azurerm_virtual_network.example.name
  address_prefixes     = [cidrsubnet(azurerm_virtual_network.example.address_space.0, 8, 0)]
}

resource "azurerm_network_security_group" "example" {
  name                = "${var.prefix}-nsg"
  location            = azurerm_resource_group.example.location
  resource_group_name = azurerm_resource_group.example.name

  security_rule {
    name                       = "AllowSyncWithAzureAD"
    priority                   = 101
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "AllowRD"
    priority                   = 201
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "3389"
    source_address_prefix      = "CorpNetSaw"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "AllowPSRemoting"
    priority                   = 301
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "5986"
    source_address_prefix      = "AzureActiveDirectoryDomainServices"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "AllowLDAPS"
    priority                   = 401
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "636"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  tags = {
    yor_trace = "282e73b6-cf09-4fe7-b3bd-98e6a4253580"
  }
}

resource "azurerm_subnet_network_security_group_association" "example" {
  subnet_id                 = azurerm_subnet.example.id
  network_security_group_id = azurerm_network_security_group.example.id
}

resource "azuread_group" "example" {
  display_name = "${var.prefix} AAD DC Administrators"
  description  = "Test for delegating group to administer Azure AD Domain Services"
  mail_enabled = true
}

data "azuread_domains" "example" {
  only_initial = true
}

resource "azuread_user" "example" {
  user_principal_name = "${var.prefix}AADDSAdminUser@${data.azuread_domains.example.domains.0.domain_name}"
  display_name        = "${var.prefix}AADDSAdminUser"
  password            = "TerrAform321!"
}

resource "azuread_group_member" "example" {
  group_object_id  = azuread_group.example.object_id
  member_object_id = azuread_user.example.object_id
}

resource "azurerm_user_assigned_identity" "example" {
  name                = "${var.prefix}-uai"
  resource_group_name = azurerm_resource_group.example.name
  location            = azurerm_resource_group.example.location
  tags = {
    yor_trace = "ab3e0f00-717f-46e5-b2cc-135b3a935ccb"
  }
}

data "azurerm_subscription" "primary" {}

resource "azurerm_role_assignment" "example" {
  scope                = data.azurerm_subscription.primary.id
  role_definition_name = "HDInsight Domain Services Contributor"
  principal_id         = azurerm_user_assigned_identity.example.principal_id
}

resource "azurerm_active_directory_domain_service" "example" {
  name                = "${var.prefix}-aadds"
  location            = azurerm_resource_group.example.location
  resource_group_name = azurerm_resource_group.example.name

  domain_name           = "never.gonna.shut.you.down"
  sku                   = "Standard"
  filtered_sync_enabled = false

  initial_replica_set {
    subnet_id = azurerm_subnet.example.id
  }

  notifications {
    additional_recipients = ["notifyA@example.net", "notifyB@example.org"]
    notify_dc_admins      = true
    notify_global_admins  = true
  }

  secure_ldap {
    enabled                  = true
    external_access_enabled  = true
    pfx_certificate          = "MIIKQQIBAzCCCgcGCSqGSIb3DQEHAaCCCfgEggn0MIIJ8DCCBKcGCSqGSIb3DQEHBqCCBJgwggSUAgEAMIIEjQYJKoZIhvcNAQcBMBwGCiqGSIb3DQEMAQMwDgQIiyYq8fFjdcECAggAgIIEYO5ElAQbptx+P3lRgFDYkyBNdA0MSMJdijukGp6Jvms43SICKly63yJwTAuekO5kvnz5kYOxZugsal8763m7qdQONGipROOKjiZBkyv6o5ZO5Kw5uHOiY9WZacq5OsKxgTKnSiPgrxYllrovrAukLtyF/md+qNz4BSsHN84i10FneVPED1lqNG8CE1I/7ZCixXozxAuh8HgX/JJ5C3wFBlyCYgxpVprVRiPVD+Hc/VJgkABOjdrkUNm2EbGFH5cgx8f3ZexkH/afaU8pGZdwW4sEzwXlunRLAbdNjrjUw5PWmTka/o5mAwR+IOLfAgTDU0zJ [...]
    pfx_certificate_password = "qwer5678"
  }

  security {
    ntlm_v1_enabled         = true
    sync_kerberos_passwords = true
    sync_ntlm_passwords     = true
    sync_on_prem_passwords  = true
    tls_v1_enabled          = true
  }

  tags = {
    Environment = "test"
    yor_trace   = "c102447e-cd1a-4036-a428-060f2db1aa4e"
  }

  depends_on = [
    azuread_group_member.example,
    azurerm_role_assignment.example,
    azurerm_subnet_network_security_group_association.example,
  ]
}

resource "azurerm_virtual_network_dns_servers" "example" {
  virtual_network_id = azurerm_virtual_network.example.id
  dns_servers        = azurerm_active_directory_domain_service.example.initial_replica_set.0.domain_controller_ip_addresses
}

resource "azurerm_hdinsight_hadoop_cluster" "example" {
  name                = "${var.prefix}-hdicluster"
  resource_group_name = azurerm_resource_group.example.name
  location            = azurerm_resource_group.example.location
  cluster_version     = "4.0"
  tier                = "Premium"

  component_version {
    hadoop = "3.1"
  }

  gateway {
    username = "sshuser"
    password = "TerrAform123!"
  }

  storage_account {
    storage_container_id = azurerm_storage_container.example.id
    storage_account_key  = azurerm_storage_account.example.primary_access_key
    is_default           = true
  }

  roles {
    head_node {
      vm_size            = "Standard_E4_V3"
      username           = "sshuser"
      password           = "TerrAform123!"
      subnet_id          = azurerm_subnet.example.id
      virtual_network_id = azurerm_virtual_network.example.id
    }

    worker_node {
      vm_size               = "Standard_E8_V3"
      username              = "sshuser"
      password              = "TerrAform123!"
      target_instance_count = 3
      subnet_id             = azurerm_subnet.example.id
      virtual_network_id    = azurerm_virtual_network.example.id
    }

    zookeeper_node {
      vm_size            = "Standard_A2_V2"
      username           = "sshuser"
      password           = "TerrAform123!"
      subnet_id          = azurerm_subnet.example.id
      virtual_network_id = azurerm_virtual_network.example.id
    }
  }

  security_profile {
    aadds_resource_id       = azurerm_active_directory_domain_service.example.resource_id
    domain_name             = azurerm_active_directory_domain_service.example.domain_name
    domain_username         = azuread_user.example.user_principal_name
    domain_user_password    = azuread_user.example.password
    ldaps_urls              = ["ldaps://${azurerm_active_directory_domain_service.example.domain_name}:636"]
    msi_resource_id         = azurerm_user_assigned_identity.example.id
    cluster_users_group_dns = [azuread_group.example.display_name]
  }

  depends_on = [
    azurerm_virtual_network_dns_servers.example,
  ]
  tags = {
    yor_trace = "23edac4f-99b3-4435-be34-3e8cec7ec6bb"
  }
}
